[gd_scene load_steps=5 format=3 uid="uid://csrgfjighsjct"]

[ext_resource type="Script" uid="uid://38sbu0aewdld" path="res://ui/shop_ui.gd" id="1_akvum"]
[ext_resource type="FontFile" uid="uid://b1qa2t5gavgfh" path="res://assets/fonts/pico-8-wide-upper.ttf" id="2_ye34a"]
[ext_resource type="Texture2D" uid="uid://dhrg6jtkydleg" path="res://assets/sprites/crops/carrot.png" id="3_vc7au"]
[ext_resource type="Texture2D" uid="uid://b3yu7aqnkxxgf" path="res://assets/sprites/ui/gold.png" id="4_0ivps"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -20.0
offset_right = 28.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_akvum")
buy_text = "Îbuy ×leave"
sell_text = "Îsell ×exit"

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CropLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -18.0
offset_right = 26.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.760784, 0.764706, 0.780392, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("2_ye34a")
theme_override_font_sizes/font_size = 5
text = "carrot (0)"

[node name="LeftArrow" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -11.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.760784, 0.764706, 0.780392, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("2_ye34a")
theme_override_font_sizes/font_size = 5
text = "Ë"

[node name="RightArrow" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -11.0
offset_right = 14.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.760784, 0.764706, 0.780392, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("2_ye34a")
theme_override_font_sizes/font_size = 5
text = "Ñ"

[node name="CropSprite" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -12.0
offset_right = 4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vc7au")

[node name="PriceLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -3.0
offset_right = 26.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.760784, 0.764706, 0.780392, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("2_ye34a")
theme_override_font_sizes/font_size = 5
text = "price:0"

[node name="GoldSprite" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_0ivps")

[node name="GoldLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 5.0
offset_right = 26.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.760784, 0.764706, 0.780392, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("2_ye34a")
theme_override_font_sizes/font_size = 5
text = "50"

[node name="ButtonsLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = 13.0
offset_right = 26.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.760784, 0.764706, 0.780392, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("2_ye34a")
theme_override_font_sizes/font_size = 5
text = "Îbuy ×leave"
